ADnED: got start/stop event thread working. Disabled PoolUsedMem scanning by default. Add in busy support to example IOC.

--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -10,7 +10,31 @@
 #
 # Macros:
 # P,R - base PV name
-#
-#
+# PORT - Asyn port name
+# ADDR - Asyn address (set to zero)
+# TIMEOUT - Asyn timeout
 #
 #####################################################################
+
+
+include "ADBase.template" 
+
+# /// 
+# /// Reset the device.
+# ///
+record(bo, "$(P)$(R)Reset")
+{
+    field(DTYP,"asynInt32")
+    field(OUT, "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_RESET")
+    field(ZNAM,"Done")  
+    field(ONAM,"Reset")
+}
+
+
+# ///
+# /// Disable this ADBase record scanning.
+# ///
+record(ai, "$(P)$(R)PoolUsedMem")
+{
+   field(SCAN, "Passive")
+}
