ADnED: Add record to deal with dugging event data. Add callback function for monitorEvent class so I have access to ADnED data structures when I process an event.

--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -30,6 +30,17 @@ record(bo, "$(P)$(R)Reset")
     field(ONAM,"Reset")
 }
 
+# /// 
+# /// Events debug (prints to stdout).
+# ///
+record(bo, "$(P)$(R)EventDebug")
+{
+    field(DTYP,"asynInt32")
+    field(OUT, "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_EVENT_DEBUG")
+    field(ZNAM,"Off")  
+    field(ONAM,"On")
+}
+
 
 # ///
 # /// Disable this ADBase record scanning.
