--- a/ADnEDApp/Db/Makefile
+++ b/ADnEDApp/Db/Makefile
@@ -11,6 +11,7 @@ include $(TOP)/configure/CONFIG
 # Create and install (or just install)
 # databases, templates, substitutions like this
 DB += ADnED.template
+DB += ADnEDDetector.template
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
