--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -53,13 +53,16 @@ record(longin, "$(P)$(R)PulseCounter_RBV")
 }
 
 # ///
-# /// Pulse ID values
+# /// Sequence ID values (the timeStamp.userTag). This is not the pulse ID.
+# /// It is a unique ID sent by the server with every V4 packet. So there
+# /// may be multiple packets with the same ID. Note: the timeStamp NT
+# /// is used to delineate pulses.
 # ///
-record(longin, "$(P)$(R)PulseID_RBV")
+record(longin, "$(P)$(R)SeqID_RBV")
 {
    field(PINI, "YES")
    field(DTYP, "asynInt32")
-   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_PULSE_ID")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_SEQ_ID")
    field(SCAN, "I/O Intr")
 }
 
