--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -245,6 +245,24 @@ include "ADnEDDetector.template"
 substitute "DET=2"
 include "ADnEDDetector.template"
 
+substitute "DET=3"
+include "ADnEDDetector.template"
+
+substitute "DET=4"
+include "ADnEDDetector.template"
+
+substitute "DET=5"
+include "ADnEDDetector.template"
+
+substitute "DET=6"
+include "ADnEDDetector.template"
+
+substitute "DET=7"
+include "ADnEDDetector.template"
+
+substitute "DET=8"
+include "ADnEDDetector.template"
+
 ##########################################################################
 
 # ///
