--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -62,6 +62,28 @@ record(longin, "$(P)$(R)PulseCounter_RBV")
    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_PULSE_COUNTER")
    field(SCAN, "I/O Intr")
 }
+record(calc, "$(P)$(R)PulseRate_RBV")
+{
+    field(INPA, "$(P)$(R)PulseRate_RBV.B NPP NMS") 
+    field(INPB, "$(P)$(R)PulseCounter_RBV NPP NMS")
+    field(INPC, "1.0")                         
+    field(CALC, "(B-A)/C")
+    field(PREC, "1")
+    field(SCAN, "1 second")
+    field(EGU, "Hz")
+}
+
+# ///
+# /// Event rate
+# ///
+record(longin, "$(P)$(R)EventRate_RBV")
+{
+   field(PINI, "YES")
+   field(DTYP, "asynInt32")
+   field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_EVENT_RATE")
+   field(SCAN, "I/O Intr")
+   field(EGU, "e/s")
+}
 
 # ///
 # /// Sequence ID values (the timeStamp.userTag). This is not the pulse ID.
@@ -76,6 +98,16 @@ record(longin, "$(P)$(R)SeqID_RBV")
    field(INP,  "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_SEQ_ID")
    field(SCAN, "I/O Intr")
 }
+record(calc, "$(P)$(R)SeqIDRate_RBV")
+{
+    field(INPA, "$(P)$(R)SeqIDRate_RBV.B NPP NMS") 
+    field(INPB, "$(P)$(R)SeqID_RBV NPP NMS")
+    field(INPC, "1.0")                         
+    field(CALC, "(B-A)/C")
+    field(PREC, "1")
+    field(SCAN, "1 second")
+}
+
 
 # ///
 # /// This will be non-zero if any missing V4 packets are detected. This record
@@ -307,5 +339,13 @@ include "ADnEDDetector.template"
 record(ai, "$(P)$(R)PoolUsedMem")
 {
    field(SCAN, "Passive")
+}
+
+# ///
+# /// Add EGU field to ArrayRate_RBV
+# ///
+record(calc, "$(P)$(R)ArrayRate_RBV")
+{
+    field(EGU, "Hz")
 }
 
