ADnED: add record to manually allocate space for buffer. It is still automatically allocated on a start, if it needs it. Also protect eventThread for running when the buffer is not allocated properly.

--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -303,6 +303,26 @@ record(ai, "$(P)$(R)PChargeIntegrated_RBV")
    field(EGU, "pC")	
 }
 
+# /// 
+# /// Allocate space for NDArray buffer. This can either be called by hand after
+# /// modifying the pixel ID ranges or max TOF. It's called automatically on
+# /// a start if any of those params have been changed, and the function hasn't already
+# /// been called.
+# ///
+record(bo, "$(P)$(R)AllocSpace")
+{
+    field(DTYP,"asynInt32")
+    field(OUT, "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_ALLOC_SPACE")
+}
+record(bi, "$(P)$(R)AllocSpaceStatus_RBV")
+{
+    field(DTYP,"asynInt32")
+    field(INP, "@asyn($(PORT),$(ADDR),$(TIMEOUT))ADNED_ALLOC_SPACE_STATUS")
+    field(ZNAM,"Ok")  
+    field(ONAM,"Required")
+    field(SCAN, "I/O Intr")
+}
+
 
 ##########################################################################
 # Include detector specific records (needs to be 1-based).
