--- a/ADnEDApp/Db/ADnEDDetectorPlugin.template
+++ b/ADnEDApp/Db/ADnEDDetectorPlugin.template
@@ -16,6 +16,7 @@
 # DET - Detector number (1-based)
 # TOFROI - TOF ROI name
 # PIXROI - Pixel ROI name
+# TOFSIZE - Max size of TOF spectrum
 #
 #####################################################################
 
@@ -44,6 +45,49 @@ record(calcout, "$(P)$(R)Det$(DET):ConfigTOFSize")
 # ///
 
 
+
+#####################################################################
+# Instantiate detector specific plugins here
+
+substitute "TIMEOUT=1"
+substitute "ADDR=0"
+substitute "NDARRAY_ADDR=0"
+
+# TOF Initial ROI
+
+substitute "R=ADnED:Det$(DET):TOF:"
+substitute "PORT=DET$(DET).TOF"
+substitute "NDARRAY_PORT=$(ADNED_PORT)"
+include "NDPluginBase.template"
+include "NDROI.template"
+
+# TOF Waveform
+substitute "R=ADnED:Det$(DET):TOF:Array:"
+substitute "PORT=DET$(DET).TOF.ARR"
+substitute "NDARRAY_PORT=DET$(DET).TOF"
+include "NDPluginBase.template"
+substitute "TYPE=Int32"
+substitute "FTVL=LONG"
+substitute "NELEMENTS=$(TOFSIZE)"
+include "NDStdArrays.template"
+
+# TOF Second ROI
+substitute "R=ADnED:Det$(DET):TOF:ROI1:"
+substitute "PORT=DET$(DET).TOF.ROI1"
+substitute "NDARRAY_PORT=DET$(DET).TOF"
+include "NDPluginBase.template"
+include "NDROI.template"
+
+# TOF Stats
+substitute "R=ADnED:Det$(DET):TOF:Stat1:"
+substitute "PORT=DET$(DET).TOF.STAT1"
+substitute "NDARRAY_PORT=DET$(DET).TOF.ROI1"
+include "NDPluginBase.template"
+substitute "NCHANS=1024"
+substitute "HIST_SIZE=1"
+substitute "XSIZE=1"
+substitute "YSIZE=1"
+include "NDStats.template"
 
 
 
