ADnED: remove R macro and manually define that in top level template file. Avoids accidental overwirtes in top level template file, because I have to redefine it a lot to create the plugins.

--- a/ADnEDApp/Db/ADnED.template
+++ b/ADnEDApp/Db/ADnED.template
@@ -9,13 +9,15 @@
 # Sept 14
 #
 # Macros:
-# P,R - base PV name
+# P - base PV name
 # PORT - Asyn port name
 # ADDR - Asyn address (set to zero)
 # TIMEOUT - Asyn timeout
 # TOFSIZE - The size of the waveforms for the TOF spectrums
 #
 #####################################################################
+
+substitute "R=ADnED:"
 
 include "ADBase.template" 
 
@@ -376,18 +378,21 @@ include "ADnEDDetector.template"
 substitute "DET=4"
 include "ADnEDDetector.template"
 
-
+substitute "R=ADnED:"
 substitute "DET=1"
 substitute "TOFROI=TOF"
 substitute "PIXROI="
 include "ADnEDDetectorPlugin.template"
 
+substitute "R=ADnED:"
 substitute "DET=2"
 include "ADnEDDetectorPlugin.template"
 
+substitute "R=ADnED:"
 substitute "DET=3"
 include "ADnEDDetectorPlugin.template"
 
+substitute "R=ADnED:"
 substitute "DET=4"
 include "ADnEDDetectorPlugin.template"
 
