ADnED: new areaDetector plugin to do ROI on pixel event data and do pixel X/Y mapping.

--- a/ADnEDApp/src/Makefile
+++ b/ADnEDApp/src/Makefile
@@ -16,6 +16,7 @@ DBD += ADnEDSupport.dbd
 # Compile and add the code to the support library
 ADnEDSupport_SRCS += ADnED.cpp
 ADnEDSupport_SRCS += nEDChannel.cpp
+ADnEDSupport_SRCS += ADnEDPixelROI.cpp
 
 ADnEDSupport_LIBS += $(EPICS_BASE_IOC_LIBS)
 
