ADnED: add Pixel X/Y ROI template file. Add use of the ADnEDPixelROI into the example IOC. Add into .req file template.

--- a/ADnED.req.template
+++ b/ADnED.req.template
@@ -20,6 +20,9 @@ $(P)Det1:TOF:ROI1:MinX
 $(P)Det1:TOF:ROI1:SizeX
 $(P)Det1:TOF:Stat1:EnableCallbacks
 $(P)Det1:TOF:Stat1:BgdWidth
+$(P)Det1:XY:ROI1:EnableCallbacks
+$(P)Det1:XY:ROI1:MinX
+$(P)Det1:XY:ROI1:SizeX
 
 $(P)Det2:Description
 $(P)Det2:PixelNumStart
@@ -37,6 +40,9 @@ $(P)Det2:TOF:ROI1:MinX
 $(P)Det2:TOF:ROI1:SizeX
 $(P)Det2:TOF:Stat1:EnableCallbacks
 $(P)Det2:TOF:Stat1:BgdWidth
+$(P)Det2:XY:ROI1:EnableCallbacks
+$(P)Det2:XY:ROI1:MinX
+$(P)Det2:XY:ROI1:SizeX
 
 $(P)Det3:Description
 $(P)Det3:PixelNumStart
@@ -54,6 +60,9 @@ $(P)Det3:TOF:ROI1:MinX
 $(P)Det3:TOF:ROI1:SizeX
 $(P)Det3:TOF:Stat1:EnableCallbacks
 $(P)Det3:TOF:Stat1:BgdWidth
+$(P)Det3:XY:ROI1:EnableCallbacks
+$(P)Det3:XY:ROI1:MinX
+$(P)Det3:XY:ROI1:SizeX
 
 $(P)Det4:Description
 $(P)Det4:PixelNumStart
@@ -71,3 +80,6 @@ $(P)Det4:TOF:ROI1:MinX
 $(P)Det4:TOF:ROI1:SizeX
 $(P)Det4:TOF:Stat1:EnableCallbacks
 $(P)Det4:TOF:Stat1:BgdWidth
+$(P)Det4:XY:ROI1:EnableCallbacks
+$(P)Det4:XY:ROI1:MinX
+$(P)Det4:XY:ROI1:SizeX
