--- a/st.cmd.config
+++ b/st.cmd.config
@@ -31,3 +31,10 @@ NDStatsConfigure("DET2.TOF.STAT1", 100, 0, "DET2.TOF.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET3.TOF.STAT1", 100, 0, "DET3.TOF.ROI1", 0, -1, -1, 0, 0)
 NDStatsConfigure("DET4.TOF.STAT1", 100, 0, "DET4.TOF.ROI1", 0, -1, -1, 0, 0)
 
+#ROI plugins to extract pixel event data and do X/Y mapping
+NDROIConfigure("DET1.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+NDROIConfigure("DET2.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+NDROIConfigure("DET3.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+NDROIConfigure("DET4.XY", 100, 0, "NED", 0, -1, -1, 0, 0)
+
+#End of st.cmd.config
